# rust_exercises

./: Cargo.toml  maturin.yml
.github/workflows/: maturin.yml  rust.yml
basics/: Cargo.toml
basics/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_world/src/: main.rs
pyword_counter/: Cargo.toml  pyproject.toml
pyword_counter/examples/: simple_call.py
pyword_counter/src/: lib.rs
