[package]
name = "pyword_counter"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyword_counter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
